mini_l.y
%{
	#include <stdio.h>
	#include <stdlib.h>
	void yyerror(const char *msg);
	extern int currLine;
	extern int currPos;
	FILE *yyin;
%}

%union{
	int num_val;
	char* id_val;
}

%error-verbose
%start prog_start
%token FUNCTION BEGIN_PARAMS END_PARAMS BEGIN_LOCALS END_LOCALS BEGIN_BODY END_BODY INTEGER ARRAY ENUM OF IF THEN ENDIF ELSE WHILE DO BEGINLOOP ENDLOOP CONTINUE READ WRITE AND OR NOT TRUE FALSE RETURN ADD SUB MULT DIV MOD EQ NEQ LT GT LTE GTE SEMICOLON COLON COMMA L_PAREN R_PAREN L_SQUARE_BRACKET R_SQUARE_BRACKET ASSIGN
%token <num_val> NUMBER
%token <id_val> IDENT
%right ASSIGN
%left OR
%left AND
%right NOT
%left LT LTE GT GTE EQ NEQ
%left ADD SUB
%left MULT DIV MOD

%%
prog_start:	functions { printf("prog_start -> functions\n");}
		;

functions:	{ printf("functions -> epsilon\n"); }
		| function functions { printf("functions -> function functions\n"); }
		;

function:	FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY { printf("function -> FUNCTION IDENT SEMICOLON PEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY\n"); }
		;

declarations:	{ printf("declarations -> epsilon\n"); }
		| declaration SEMICOLON declarations { printf("declarations -> declaration SEMICOLON declarations\n"); }
		;

declaration:	identifiers COLON INTEGER { printf("declaration -> identifiers COLON INTEGER\n"); }
		| identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER { printf("declaration -> identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER\n"); }
		| identifiers COLON ENUM L_PAREN identifiers R_PAREN { printf("declaration -> identifiers COLON ENUM L_PAREN identifiers R_PAREN\n"); }
		;

identifiers:	ident { printf("identifiers -> ident\n"); }
		| ident COMMA identifiers { printf("identifiers -> IDENT COMMA identifiers\n"); }
		;

ident:	IDENT { printf("ident -> IDENT %s\n", $1); }

statements:	{ printf("statements -> epsilon\n"); }
		| statement SEMICOLON statements { printf("statements -> statement SEMICOLON statements\n"); }
		;

statement:	var ASSIGN expression { printf("statement -> var ASSIGN expression\n"); }
		| IF bool_exp THEN statements ENDIF { printf("statement -> IF bool_exp THEN statements ENDIF\n"); }
		| IF bool_exp THEN statements ELSE statements ENDIF { printf("statement -> IF bool_exp THEN statements ELSE statements ENDIF\n"); }
		| WHILE bool_exp BEGINLOOP statements ENDLOOP { printf("statement -> WHILE bool_exp BEGINLOOP statements ENDLOOP\n"); }
		| DO BEGINLOOP statements ENDLOOP WHILE bool_exp { printf("statement -> DO BEGINLOOP statements ENDLOOP WHILE bool_exp"); }
		| READ vars { printf("statement -> READ vars\n"); }
		| WRITE vars { printf("statement -> WRITE vars\n"); }
		| CONTINUE { printf("statement -> CONTINUE\n"); }
		| RETURN expression { printf("statement -> RETURN expression\n"); }
		;

bool_exp:	relation_and_exp { printf("bool_exp -> relation_and_exp\n"); }
		| relation_and_exp OR bool_exp { printf("bool_exp -> relation_and_exp OR bool_exp\n"); }
		;

relation_and_exp:	relation_exp { printf("relation_and_exp -> relation_exp\n"); }
		| relation_exp AND relation_and_exp { printf("relation_and_exp -> relation_exp AND relation_and_exp\n"); }
		;

relation_exp:	NOT expression comp expression { printf("relation_exp -> NOT expression comp expression\n"); }
		| expression comp expression { printf("relation_exp -> expression comp expression\n"); }
		| NOT TRUE { printf("relation_exp -> NOT TRUE\n"); }
		| TRUE { printf("relation_exp -> TRUE\n"); }
		| NOT FALSE { printf("relation_exp -> NOT FALSE\n"); }
		| FALSE { printf("relation_exp -> FALSE\n"); }
		| NOT L_PAREN bool_exp R_PAREN { printf("relation_exp -> NOT L_PAREN bool_exp R_PAREN\n"); }
		| L_PAREN bool_exp R_PAREN { printf("relation_exp -> L_PAREN bool_exp R_PAREN\n"); }
		;

comp:	EQ { printf("comp -> EQ\n"); }
	| NEQ { printf("comp -> NEQ\n"); }
	| LT { printf("comp -> LT\n"); }
	| GT { printf("comp -> GT\n"); }
	| LTE { printf("comp -> LTE\n"); }
	| GTE { printf("comp -> GTE\n"); }
	;

expressions:	{ printf("expressions -> epsilon\n"); }
		| expression { printf("expressions -> expression\n"); }
		| expression COMMA expressions { printf("expressions -> expression COMMA expressions\n"); }
		;

expression:	multiplicative_exp { printf("expression -> multiplicative_exp\n"); }
		| multiplicative_exp ADD expression { printf("expression -> multiplicative_exp ADD expression\n"); }
		| multiplicative_exp SUB expression { printf("expression -> multiplicative_exp SUB expression\n"); }
		;

multiplicative_exp:	term { printf("multiplicative_exp -> term\n"); }
			| term MULT multiplicative_exp { printf("multiplicative_exp -> term MULT multiplicative_exp\n"); }
			| term DIV multiplicative_exp { printf("multiplicative_exp -> term DIV multiplicative_exp\n"); }
			| term MOD multiplicative_exp { printf("multiplicative_exp -> term MOD multiplicative_exp\n"); }

term:	SUB var { printf("term -> SUB var\n"); }
	| var { printf("term -> var\n"); }
	| SUB NUMBER { printf("term -> SUB NUMBER\n"); }
	| NUMBER { printf("term -> NUMBER\n"); }
	| SUB L_PAREN expression R_PAREN { printf("term -> SUB L_PAREN NUMBER R_PAREN\n"); }
	| L_PAREN expression R_PAREN { printf("term -> L_PAREN NUMBER R_PAREN\n"); }
	| ident L_PAREN expressions R_PAREN { printf("term -> ident L_PAREN expressions R_PAREN\n"); }
	;

vars:	var { printf("vars -> var\n"); }
	| var COMMA vars { printf("vars -> var COMMA vars\n"); }
	;

var:	ident { printf("var -> ident\n"); }
	| ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET { printf("var -> ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET\n"); }
	;

%%

int main(int argc, char **argv) {

	if (argc > 1)
	{
		yyin = fopen(argv[1], "r");
		if ( yyin == NULL)
		{
			printf("Not a valid file name: %s filename\n", argv[0]);
			exit(0);
		}
	}
	yyparse();
	return 0;
}

void yyerror(const char *msg) {
	printf("** Line %d, position %d: %s\n", currLine, currPos, msg);
}
